fixes to support Goss v0.2.x upgrade

--- a/templates/goss_provision.json.erb
+++ b/templates/goss_provision.json.erb
@@ -115,8 +115,8 @@
     "user": {
        "<%= @tomcat_user %>": {
             "exists": true,
-            "uid": "501",
-            "gid": "501",
+            "uid": 501,
+            "gid": 501,
             "groups": [
                "<%= @tomcat_group %>"
             ],
@@ -126,7 +126,7 @@
     "group": {
        "<%= @tomcat_group %>": {
             "exists": true,
-            "gid": "501"
+            "gid": 501
         }
     },
     "dns": {
