--- a/templates/logbackInclude.xml.erb
+++ b/templates/logbackInclude.xml.erb
@@ -185,7 +185,7 @@
 <%- end -%>
 
    <!--********************************************************************************************-->
-   <!-- Analytcis logging                                                                          -->
+   <!-- Analytics logging                                                                          -->
    <!--********************************************************************************************-->
 
    <!-- Note that additivity is set to false here -->
