replace Ruby 2.0.0 with Ruby 2.3.0
involves a few code changes and also updating some gem versions

--- a/templates/provision/gold_master.erb
+++ b/templates/provision/gold_master.erb
@@ -77,22 +77,23 @@ fi
 cd rk_tomcat
 
 $LOGGER "Configuring RubyGems..."
-yum -y install ruby-devel glibc-devel gcc
+yum -y install ruby23-devel glibc-devel gcc
+yum -y remove ruby20 ruby20-libs
 cat > /root/.gemrc << 'GEMRC'
 ---
 install: --nodocument --bindir /usr/local/bin
 GEMRC
 
 $LOGGER "Installing Bundler..."
-gem install io-console bundler
+gem install bundler
+
+$LOGGER "Installing Puppet dependencies..."
+export PUPPET_MODULE_DIR='/etc/puppetlabs/code/modules'
+yum -y install augeas-devel augeas libxml2-devel
 
 $LOGGER "Installing other gem dependencies..."
 BUNDLE=$(which bundle 2>/dev/null || echo '/usr/local/bin/bundle')
 $BUNDLE install
-
-$LOGGER "Installing Puppet dependencies..."
-export PUPPET_MODULE_DIR='/etc/puppetlabs/code/modules'
-yum -y install ruby20-augeas
 
 LIBRARIAN_PUPPET=$(which librarian-puppet 2>/dev/null || echo '/usr/local/bin/librarian-puppet')
 $LIBRARIAN_PUPPET config path "$PUPPET_MODULE_DIR" --global
