--- a/templates/provision/gold_master.erb
+++ b/templates/provision/gold_master.erb
@@ -89,7 +89,7 @@ gem install bundler
 
 $LOGGER "Installing Puppet dependencies..."
 export PUPPET_MODULE_DIR='/etc/puppetlabs/code/modules'
-yum -y install augeas-devel augeas
+yum -y install augeas-devel augeas libxml2-devel
 
 $LOGGER "Installing other gem dependencies..."
 BUNDLE=$(which bundle 2>/dev/null || echo '/usr/local/bin/bundle')
