--- a/templates/provision/gold_master.erb
+++ b/templates/provision/gold_master.erb
@@ -78,7 +78,7 @@ cd rk_tomcat
 
 $LOGGER "Configuring RubyGems..."
 yum -y install ruby23-devel glibc-devel gcc
-yum -y remove ruby20
+yum -y remove ruby20 ruby20-libs
 cat > /root/.gemrc << 'GEMRC'
 ---
 install: --nodocument --bindir /usr/local/bin
