--- a/templates/tomcat7.conf.erb
+++ b/templates/tomcat7.conf.erb
@@ -14,7 +14,7 @@ HEAP_SIZE=$(printf "%0.f" ${HEAP_SIZE})
 
 # Prepare the options to pass to java
 HEAP_OPTS="-Xms${HEAP_SIZE}k -Xmx${HEAP_SIZE}k"
-JVM_OPTS="-server -Djava.awt.headless=true -XX:-OmitStackTraceInFastThrow -Duser.timezone='GMT' -Dlogback.ContextSelector=JNDI"
+JVM_OPTS="-server -Djava.awt.headless=true -XX:-OmitStackTraceInFastThrow -Duser.timezone='GMT' -Dlogback.ContextSelector=JNDI -Djava.io.tmpdir=<%= @tmpdir -%>"
 RK_PLATFORM_OPTS="-DFITNESSKEEPER_PLATFORM_ENVIRONMENT=<%= @platform_env -%> -DFITNESSKEEPER_PLATFORM_CONFIG_PATH=${CATALINA_HOME}/conf"
 
 <%- if @newrelic_enabled -%>
