Added config for LogDNA appender

--- a/templates/logbackInclude.xml.erb
+++ b/templates/logbackInclude.xml.erb
@@ -32,7 +32,7 @@
       com.fasterxml.jackson
    "/>
 
-   <property name="logPattern" value="{%thread} [%level] %logger{0} - %m {mdc.uuid=%X{mdc.uuid:-null}, user.legacy_id=%X{user.legacy_id:-null}}%n%rEx{full,${ignoredStackTrace}}" />
+   <property name="logPattern" value="{%thread} [%level] %logger{0} - %m {mdc.uuid=%X{mdc.uuid:-null}, user.id=%X{user.id:-null}}%n%rEx{full,${ignoredStackTrace}}" />
    <property name="filePattern" value="[%d{yyyy-MM-dd HH:mm:ss.SSS}] %cn ${logPattern}" />
    
 <%- if @tier == "staging" -%>
@@ -142,6 +142,46 @@
        </layout>
    </appender>
 
+   <appender name="APPLOGS_LOGDNA-HTTP" class="net._95point2.utils.LogDNAAppender">
+<%- if (@tier == "production" && ! @artifacts.keys.include?("admin")) -%>
+       <filter class="ch.qos.logback.core.filter.EvaluatorFilter">
+          <evaluator> <!-- defaults to type ch.qos.logback.classic.boolex.JaninoEventEvaluator -->
+             <expression>try { Class.forName("fitnesskeeper.core.logging.InternalUsersFilter"); return true;  } catch (Exception ex) { return false; }</expression>
+          </evaluator>
+          <OnMatch>NEUTRAL</OnMatch>
+          <OnMismatch>DENY</OnMismatch>
+       </filter>
+       <filter class="ch.qos.logback.classic.filter.LevelFilter">
+          <level>INFO</level>
+          <onMatch>ACCEPT</onMatch>
+          <onMismatch>NEUTRAL</onMismatch>
+       </filter>
+       <filter class="ch.qos.logback.classic.filter.LevelFilter">
+          <level>WARN</level>
+          <onMatch>ACCEPT</onMatch>
+          <onMismatch>NEUTRAL</onMismatch>
+       </filter>
+       <filter class="ch.qos.logback.classic.filter.LevelFilter">
+          <level>ERROR</level>
+          <onMatch>ACCEPT</onMatch>
+          <onMismatch>NEUTRAL</onMismatch>
+       </filter>
+       <filter class="fitnesskeeper.core.logging.InternalUsersFilter" />
+<%- end -%>
+
+       <appName>LogDNA-Logback-Test</appName>
+       <ingestKey><%= @logdna_applogs_token %></ingestKey>
+       <includeStacktrace>true</includeStacktrace>
+
+       <layout>
+          <pattern>${logentriesPattern}</pattern>
+       </layout>
+   </appender>
+
+   <appender name="APPLOGS_LOGDNA" class="ch.qos.logback.classic.AsyncAppender">
+      <appender-ref ref="APPLOGS_LOGDNA-HTTP" />
+   </appender>
+
 
    <!-- Sometimes we might run code without an application context, i.e. unit tests, or if someone forgets to setup -->
    <if condition='property("appName").contains("default")'>
@@ -162,6 +202,7 @@
 
 <%- if @tier != "loadtest" -%>
       <appender-ref ref="APPLOGS_LOGENTRIES" />
+      <appender-ref ref="APPLOGS_LOGDNA" />
       <appender-ref ref="ERRORS_ANALYTICS" />
 <%- end -%>
 
