--- a/templates/provision/gold_master.erb
+++ b/templates/provision/gold_master.erb
@@ -132,12 +132,14 @@ $LOGGER "Linking Tomcat homedir to CATALINA_HOME..."
 ln -s /usr/share/tomcat7 /home/tomcat
 
 GOSS=$(which goss)
-if [ -n "$GOSS" ]; then
+GOSSFILE='./goss.json'
+if [[ -x "$GOSS" && -r "$GOSSFILE" ]]; then
+  GOSS_CMD="$GOSS --gossfile $GOSSFILE"
   $LOGGER "Testing configuration with Goss..."
   GOSS_OUT=/root/goss.out
   cd /root
   echo "### BEGIN GOSS - $(date)" > $GOSS_OUT
-  $GOSS render | $GOSS validate >> $GOSS_OUT
+  $GOSS_CMD render | $GOSS_CMD validate >> $GOSS_OUT
   echo "### END GOSS - $(date)" >> $GOSS_OUT
 
   if [ -r "$GOSS_OUT" ]; then
