adding consul agent (#16)
* Adding consul agent to our builds

* Fixing syntax error

* Removing curly braces around vars

* Adding hiera entries to tests

* Update fixtures

* Update consul module to help pass tests *sigh*

* Set , :architecture => 'x86_64' fact

* adding operatingsystem => 'Amazon'

* Set osfamily to RedHat

* Adding archive module to fixtures

* Setting the correct archive version for puppet3

* Adding CODEOWNERS File

* Adding GOSS Tests

* I hate rspec sooo much right now

* Update goss permissions

--- a/templates/goss_provision.json.erb
+++ b/templates/goss_provision.json.erb
@@ -32,6 +32,22 @@
             "filetype": "file",
             "contains": []
         },
+        "/opt/consul/archives/consul-<%= @consul_version %>/consul": {
+            "exists": true,
+            "mode": "0555",
+            "owner": "root",
+            "group": "root",
+            "filetype": "file",
+            "contains": []
+        },
+        "/etc/consul/config.json": {
+            "exists": true,
+            "mode": "0664",
+            "owner": "consul",
+            "group": "consul",
+            "filetype": "file",
+            "contains": []
+        },
         "<%= @catalina_home %>/lib/<%= @postgres_driver %>.jar": {
             "exists": true,
             "mode": "0644",
