feat: capture Tomcat crash dumps to S3 (#18)

--- a/templates/goss_provision.json.erb
+++ b/templates/goss_provision.json.erb
@@ -95,6 +95,14 @@
             "group": "root",
             "filetype": "directory",
             "contains": []
+        },
+        "/usr/local/bin/saveCrashDump.rb": {
+            "exists": true,
+            "mode": "0755",
+            "owner": "root",
+            "group": "root",
+            "filetype": "file",
+            "contains": []
         }
     },
     "package": {
