--- a/templates/logdna-tomcat.conf.erb
+++ b/templates/logdna-tomcat.conf.erb
@@ -10,17 +10,17 @@ $ActionSendStreamDriverPermittedPeer *.logdna.com
 
 # catalina.out
 $InputFileName <%= @catalina_home %>/logs/catalina.out
-$InputFileTag catalina-<%= @application_tag %>:
-$InputFileStateFile catalina-<%= @application_tag %>
+$InputFileTag <%= @application_tag %>:
+$InputFileStateFile logdna-catalina-<%= @application_tag %>
 $InputFileSeverity info
-$InputFileFacility user
+$InputFileFacility local6
 $InputRunFileMonitor
 
 # Only entered once in case of following multiple files
 # This will poll the file every 10 seconds
-$InputFilePollInterval 10
+$InputFilePollInterval 5
 
-$template LogDNAFormat,"<%%PRI%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [logdna@48950 key=\"<%= @logdna_token %>\"] %msg%"
+$template LogDNAFormat,"<%%PRI%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [logdna@48950 key=\"<%= @applogs_token %>\" tags=\"catalina,<%= @application_tag %>\"] %msg%"
 
 # Send messages to LogDNA over TCP using the template.
-user.info @@syslog-a.logdna.com:6514;LogDNAFormat
+local6.info @@syslog-a.logdna.com:6514;LogDNAFormat
