--- a/templates/logbackInclude.xml.erb
+++ b/templates/logbackInclude.xml.erb
@@ -137,6 +137,7 @@
 
    <appender name="APPLOGS_LOGDNA" class="ch.qos.logback.classic.AsyncAppender">
       <appender-ref ref="APPLOGS_LOGDNA-HTTP" />
+      <neverBlock>true</neverBlock>
    </appender>
 
 
