feat: allow minor versions of tomcat in goss

--- a/templates/goss_provision.json.erb
+++ b/templates/goss_provision.json.erb
@@ -100,15 +100,11 @@
     "package": {
        "<%= @tomcat_native_pkg %>": {
             "installed": true,
-            "versions": [
-                "1.2.21"
-            ]
+            "semver-constraint": ">=1.2.21 <1.3.0"
         },
         "<%= @tomcat_pkg %>": {
             "installed": true,
-            "versions": [
-                "7.0.94"
-            ]
+            "semver-constraint": ">=7.0.94 <7.1.0"
         },
         <%- @font_pkgs.each do |font_pkg| -%>
         "<%= font_pkg %>": {
